#311 final sections of localization

--- a/synapsis/src/main/resources/templates/pages/accessDenied.html
+++ b/synapsis/src/main/resources/templates/pages/accessDenied.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="_layout">
+<div layout:fragment="content">
 <head>
     <meta charset="UTF-8">
     <title>Synapsis</title>
@@ -40,4 +41,5 @@
         </div>
     </div>
 </body>
+</div>
 </html>
